Refactor courses logic, removed not needed utility functions